ch7/tests/fails/empty_panic.stderr
error: panic needs a message!

         = help: try to add a message
         = note: we will add the message to Result's Err

  --> tests/fails/empty_panic.rs:11:9
   |
11 |         panic!();
   |         ^^^^^^^^^
